make sure ifa_addr isn't null

Summary:
the manpage:
       The ifa_addr field points to a structure containing the interface
       address.  (The sa_family subfield should be consulted to determine
       the format of the address structure.)  This field may contain a null
       pointer.

why that exactly happens I do not know in absence of more debug info.
I expect it's something to do with an interface being up but not quite
somehow. I utterly failed to simulate this though :|
because of that I do not know if such a device has any use being listed,
and I am adding some possibly relevant debug output in the hopes of
maybe getting some data reported.
if these devices still turn out useful, the MyNIC construction needs
partially moving before the ifa_addr check.

BUG: 417798
FIXED-IN: 5.18.1

Test Plan: hoping for the best!

Reviewers: ngraham

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D27467